Package missed start command.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "author": "kumpelblase2",
   "license": "MIT",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "bluebird": "^2.9.14",
     "lodash": "^3.5.0",
