--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "bluebird": "^2.9.14",
-    "lodash": "^3.5.0",
-    "node-schedule": "^0.2.3",
-    "phantom": "^0.7.2",
-    "pushbullet": "^1.4.3"
+    "bluebird": "2.9.14",
+    "lodash": "3.5.0",
+    "node-schedule": "1.2.0",
+    "phantom": "3.1.0",
+    "pushbullet": "1.4.3"
   }
 }
